@@ -5,13 +5,11 @@
  */
 
 plugins {
-
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.11'
     id 'application'
     id 'distribution'
-    //id "org.javamodularity.moduleplugin" version "1.8.10" apply false
-    
+    id 'org.beryx.jlink' version '2.24.2'    
 }
 
 repositories {
@@ -21,7 +19,6 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     implementation 'com.google.guava:guava:30.1.1-jre'
-//    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.1.1'
 }
 
 javafx{
@@ -32,17 +29,4 @@ application {
     mainClass = 'erb.App'
     mainModule = 'erb'
 }
-
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
-
-//run {
-//    applicationDefaultJvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-//   								 '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
-//   	]    
-//    jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-//                                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
- //   ]
-//}
 
